--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    テスト
     <div class="input-area">
       <input type="text" id="add-text" placeholder="TODOを入力" />
       <button id="add-button">追加</button>
